--- a/.github/workflows/name-generator.yml
+++ b/.github/workflows/name-generator.yml
@@ -17,7 +17,7 @@ jobs:
   build:
     runs-on: 
       matrix:
-        [ubuntu-latest, macos-latest]
+      - macos-latest
     strategy:
       matrix:
         python-version: [3.7]
