--- a/.github/workflows/name-generator.yml
+++ b/.github/workflows/name-generator.yml
@@ -20,7 +20,7 @@ jobs:
       - macos-latest
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.6, 3.7]
 
     steps:
     - uses: actions/checkout@v2
