--- a/.github/workflows/name-generator.yml
+++ b/.github/workflows/name-generator.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   build:
     runs-on: 
-      - macos-latest
+      - ubuntu-latest
     strategy:
       matrix:
         python-version: [3.6, 3.7]
@@ -31,7 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Test with pytest
-      run: |
-        pip install pytest
-        pytest
+#    - name: Test with pytest
+#      run: |
+#        pip install pytest
+#        pytest
