--- a/.github/workflows/name-generator.yml
+++ b/.github/workflows/name-generator.yml
@@ -6,32 +6,38 @@ name: Pokemon Name Generator
 on:
   push:
     branches:
-    - master 
-    - develop
+      - master
+      - develop
   pull_request:
     branches:
-    - master
-    - develop
+      - master
+      - develop
 
 jobs:
   build:
-    runs-on: 
+    runs-on:
       - ubuntu-latest
     strategy:
       matrix:
         python-version: [3.6, 3.7]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Test with pytest
-      run: |
-        pip install pytest
-        pytest
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Test with pytest
+        run: |
+          pip install pytest
+          pytest
+      - uses: actions/checkout@master
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
