--- a/.github/workflows/name-generator.yml
+++ b/.github/workflows/name-generator.yml
@@ -19,7 +19,7 @@ jobs:
       - ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7]
+        python-version: 3.7
 
     steps:
       - uses: actions/checkout@v2
@@ -35,7 +35,8 @@ jobs:
         run: |
           pip install pytest
           pytest
-      - uses: actions/checkout@master
+      - name: SonarCloud Trigger
+        uses: actions/checkout@master
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
