--- a/.github/workflows/name-generator.yml
+++ b/.github/workflows/name-generator.yml
@@ -37,6 +37,8 @@ jobs:
           pytest
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
+        with:
+          projectBaseDir: api
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
