--- a/.github/workflows/name-generator.yml
+++ b/.github/workflows/name-generator.yml
@@ -19,7 +19,7 @@ jobs:
       - ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: [3.6, 3.7]
 
     steps:
       - uses: actions/checkout@v2
@@ -35,10 +35,3 @@ jobs:
         run: |
           pip install pytest
           pytest
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
-        with:
-          projectBaseDir: api
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
