--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
+coverage==5.0.4
 Flask==1.1.1
 flask-restplus==0.13.0
 gast==0.2.2
@@ -26,15 +27,22 @@ Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 Markdown==3.2.1
 MarkupSafe==1.1.1
+more-itertools==8.2.0
 numpy==1.18.2
 oauthlib==3.1.0
 opt-einsum==3.2.0
+packaging==20.3
 pandas==1.0.3
 pathspec==0.7.0
+pluggy==0.13.1
 protobuf==3.11.3
+py==1.8.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pyparsing==2.4.6
 pyrsistent==0.15.7
+pytest==5.4.1
+pytest-flask==1.0.0
 python-dateutil==2.8.1
 pytz==2019.3
 PyYAML==5.3.1
@@ -51,6 +59,7 @@ termcolor==1.1.0
 toml==0.10.0
 typed-ast==1.4.1
 urllib3==1.25.8
+wcwidth==0.1.9
 Werkzeug==0.16.1
 wrapt==1.12.1
 zipp==3.1.0
