--- a/.github/workflows/name-generator.yml
+++ b/.github/workflows/name-generator.yml
@@ -22,7 +22,10 @@ jobs:
         python-version: [3.7]
 
     steps:
+      # Checkout repo
       - uses: actions/checkout@v2
+
+      # Dependencies
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v1
         with:
@@ -31,7 +34,20 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      # Test
       - name: Test with pytest
         run: |
-          coverage run -m pytest
-          coverage xml
+          pytest --cov=./ --cov-report=xml --doctest-modules
+
+      - name: persist coverage.xml as an artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: code-coverage-report
+            path: coverage.html
+      # # Sonar Qube
+      # - name: SonarCloud Scan
+      #   uses: sonarsource/sonarcloud-github-action@master
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
