--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.projectKey=PokeMate_name-generator
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
 sonar.sources=.
 
+sonar.python.coverage.reportPath=coverage.xml
