--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,124 @@
 absl-py==0.9.0
 aniso8601==8.0.0
+# Editable install with no version control (api==1.0.0)
+-e /Users/simonbachmann/Programming/pokemate-name-generator
 appdirs==1.4.3
+appnope==0.1.0
 astor==0.8.1
+astroid==2.3.3
 attrs==19.3.0
-black==19.10b0
+autopep8==1.5
+backcall==0.1.0
+bleach==3.1.1
 cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
 coverage==5.0.4
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+distlib==0.3.0
+entrypoints==0.3
+filelock==3.0.12
 Flask==1.1.1
 flask-restplus==0.13.0
+flask-swagger==0.2.14
+flask-swagger-ui==3.25.0
 gast==0.2.2
-google-auth==1.11.3
+google-auth==1.11.2
 google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
+google-pasta==0.1.8
 grpcio==1.27.2
 h5py==2.10.0
+html5lib==0.9999999
 idna==2.9
 importlib-metadata==1.5.0
+ipykernel==5.1.4
+ipython==7.13.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isort==4.3.21
 itsdangerous==1.1.0
+jedi==0.16.0
 Jinja2==2.11.1
+joblib==0.14.1
 jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.0.0
+jupyter-console==6.1.0
+jupyter-core==4.6.3
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
 Markdown==3.2.1
 MarkupSafe==1.1.1
+matplotlib==3.1.3
+mccabe==0.6.1
+mistune==0.8.4
+mock==4.0.1
 more-itertools==8.2.0
-numpy==1.18.2
+nbconvert==5.6.1
+nbformat==5.0.4
+notebook==6.0.3
+numpy==1.18.1
 oauthlib==3.1.0
 opt-einsum==3.2.0
 packaging==20.3
-pandas==1.0.3
-pathspec==0.7.0
+pandas==1.0.1
+pandocfilters==1.4.2
+parso==0.6.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.0.0
 pluggy==0.13.1
+prometheus-client==0.7.1
+prompt-toolkit==3.0.4
 protobuf==3.11.3
+ptyprocess==0.6.0
 py==1.8.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.5.0
+Pygments==2.6.1
+pylint==2.4.4
 pyparsing==2.4.6
 pyrsistent==0.15.7
 pytest==5.4.1
-pytest-flask==1.0.0
+pytest-cov==2.8.1
 python-dateutil==2.8.1
 pytz==2019.3
-PyYAML==5.3.1
-regex==2020.2.20
+pytzdata==2019.3
+PyYAML==5.3
+pyzmq==19.0.0
+qtconsole==4.7.1
+QtPy==1.9.0
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
 scipy==1.4.1
+Send2Trash==1.5.0
 six==1.14.0
-tensorboard==2.1.1
-tensorflow==2.1.0
-tensorflow-estimator==2.1.0
+tb-nightly==1.15.0a20190806
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
 termcolor==1.1.0
-toml==0.10.0
+terminado==0.8.3
+testpath==0.4.4
+tf-estimator-nightly==1.14.0.dev2019080601
+Theano==1.0.4
+tornado==6.0.4
+tqdm==4.43.0
+traitlets==4.3.3
 typed-ast==1.4.1
 urllib3==1.25.8
-wcwidth==0.1.9
+virtualenv==20.0.9
+wcwidth==0.1.8
+webencodings==0.5.1
 Werkzeug==0.16.1
+widgetsnbextension==3.5.1
 wrapt==1.12.1
 zipp==3.1.0
