path to coverage.xml

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,5 @@ sonar.projectKey=PokeMate_name-generator
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
 sonar.sources=.
 
-sonar.python.coverage.reportPath=coverage.xml
+# file should be located in the path according to this article https://dev.to/remast/go-for-sonarcloud-with-github-actions-3pmn
+sonar.python.coverage.reportPath=/github/workspace/coverage.xml
