--- a/.github/workflows/name-generator.yml
+++ b/.github/workflows/name-generator.yml
@@ -36,14 +36,10 @@ jobs:
       - name: Test with pytest
         run: |
           pytest --cov=./ --cov-report=xml --doctest-modules
-      # - name: persist coverage.xml as an artifact
-      #   uses: actions/upload-artifact@v1
-      #   with:
-      #     name: code-coverage-report
-      #     path: coverage.xml
-      # # Sonar Qube
-      # - name: SonarCloud Scan
-      #   uses: sonarsource/sonarcloud-github-action@master
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      # Sonar Qube
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
