--- a/.github/workflows/name-generator.yml
+++ b/.github/workflows/name-generator.yml
@@ -8,10 +8,10 @@ on:
     branches:
       - master
       - develop
-  pull_request:
-    branches:
-      - master
-      - develop
+  # pull_request:
+  #   branches:
+  #     - master
+  #     - develop
 
 jobs:
   build:
@@ -27,6 +27,15 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.7
+
+      # load dependencies from cache
+      - uses: actions/cache@v1
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
